--- a/index_4.html
+++ b/index_4.html
@@ -124,7 +124,7 @@
 
 			<!-- Section 2 - Main Page 4 -->
 
-			<section class="section_2 grey-bg">
+			<section class="section_2_land grey-bg">
 				<div class="row clearfix">
 					<div class="right_position">
 						<div class="h2_bold_wrapp">
