--- a/news_article.html
+++ b/news_article.html
@@ -25,7 +25,6 @@
 	<!-- Header -->
 		
 	<header>
-
 		<div class="header">
 			<div class="row clearfix">
 				<div class="left">
@@ -78,7 +77,6 @@
 				</div>
 			</div>			
 		</div>
-								
 	</header>
 
 	<!-- /Header -->
@@ -113,7 +111,7 @@
 
 			<!-- Section 2 - News Article -->
 
-			<section class="grey_bg">
+			<!-- <section class="grey_bg">
 				<div class="row row_2">					
 					<div class="news_articles_slider_wrapp">
 						<h2>Другие новости</h2>
@@ -188,7 +186,7 @@
 						<div class="news_articles_slider_arrows"></div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- /Section 2 - News Article -->
 
