--- a/all_news.html
+++ b/all_news.html
@@ -117,8 +117,10 @@
 												<img src="img/image8.jpg" alt="" />
 											</div>
 										</div>
-										<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-										<p class="date_2">28.08.2018</p>
+										<div class="description">
+											<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
+											<p class="date_2">28.08.2018</p>
+										</div>
 									</a>
 									<a class="news_thumb">
 										<div class="img_box_wrapp">
@@ -126,8 +128,10 @@
 												<img src="img/image9.jpg" alt="" />
 											</div>
 										</div>
-										<p>Проведены работы в 717 многоквартирных домах</p>
-										<p class="date_2">28.08.2018</p>
+										<div class="description">
+											<p>Проведены работы в 717 многоквартирных домах</p>
+											<p class="date_2">28.08.2018</p>
+										</div>
 									</a>
 									<a class="news_thumb">
 										<div class="img_box_wrapp">
@@ -135,35 +139,10 @@
 												<img src="img/image10.jpg" alt="" />
 											</div>
 										</div>
-										<p>В Перми снесли 45 аварийных домов</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image8.jpg" alt="" />
-											</div>
+										<div class="description">
+											<p>В Перми снесли 45 аварийных домов</p>
+											<p class="date_2">28.08.2018</p>
 										</div>
-										<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image9.jpg" alt="" />
-											</div>
-										</div>
-										<p>Проведены работы в 717 многоквартирных домах</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image10.jpg" alt="" />
-											</div>
-										</div>
-										<p>В Перми снесли 45 аварийных домов</p>
-										<p class="date_2">28.08.2018</p>
 									</a>
 								</div>
 								<div class="news_templ">
@@ -186,8 +165,10 @@
 												<img src="img/image8.jpg" alt="" />
 											</div>
 										</div>
-										<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-										<p class="date_2">28.08.2018</p>
+										<div class="description">
+											<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
+											<p class="date_2">28.08.2018</p>
+										</div>
 									</a>
 									<a class="news_thumb">
 										<div class="img_box_wrapp">
@@ -195,8 +176,10 @@
 												<img src="img/image9.jpg" alt="" />
 											</div>
 										</div>
-										<p>Проведены работы в 717 многоквартирных домах</p>
-										<p class="date_2">28.08.2018</p>
+										<div class="description">
+											<p>Проведены работы в 717 многоквартирных домах</p>
+											<p class="date_2">28.08.2018</p>
+										</div>
 									</a>
 									<a class="news_thumb">
 										<div class="img_box_wrapp">
@@ -204,35 +187,10 @@
 												<img src="img/image10.jpg" alt="" />
 											</div>
 										</div>
-										<p>В Перми снесли 45 аварийных домов</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image8.jpg" alt="" />
-											</div>
+										<div class="description">
+											<p>В Перми снесли 45 аварийных домов</p>
+											<p class="date_2">28.08.2018</p>
 										</div>
-										<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image9.jpg" alt="" />
-											</div>
-										</div>
-										<p>Проведены работы в 717 многоквартирных домах</p>
-										<p class="date_2">28.08.2018</p>
-									</a>
-									<a class="news_thumb">
-										<div class="img_box_wrapp">
-											<div class="img_box">
-												<img src="img/image10.jpg" alt="" />
-											</div>
-										</div>
-										<p>В Перми снесли 45 аварийных домов</p>
-										<p class="date_2">28.08.2018</p>
 									</a>
 								</div>
 							</div>
@@ -256,7 +214,7 @@
 			<div class="col">
 				<div class="append-elem resp_480" data-append-elem = "5"></div>
 				<div class="append-elem" data-append-desktop-elem = "4" data-min-screen = "480">
-					<p>Дизайн сайта<br /><a href="#" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
+					<p>Дизайн сайта<br /><a href="https://vk.com/nicesummerwind" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
 				</div>
 			</div>
 			<div class="col">
