--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			<div class="col">
 				<div class="append-elem resp_480" data-append-elem = "5"></div>
 				<div class="append-elem" data-append-desktop-elem = "4" data-min-screen = "480">
-					<p>Дизайн сайта<br /><a href="#" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
+					<p>Дизайн сайта<br /><a href="https://vk.com/nicesummerwind" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
 				</div>
 			</div>
 			<div class="col">
