--- a/index_4.html
+++ b/index_4.html
@@ -100,18 +100,8 @@
 								<h1>ЖКХ помощник</h1>
 								<p>онлайн-сервис компенсаций за проблемы ЖКХ</p>
 							</div>
-							<div class="overflow_wrapp">
-								<div class="steps_thumbs_2">
-									<div class="step_thumb_2">
-										<p><span class="sb">Сообщи</span><br /> о проблеме</p>
-									</div>
-									<div class="step_thumb_2">
-										<p><span class="sb">Получи компенсацию</span><br /> и решение </p>
-									</div>
-								</div>
-							</div>
 							<div>
-								<a href="#" class="green_pill_2">Решить проблему</a>
+								<a href="#" class="green_pill_2">Сообщить о проблеме</a>
 							</div>
 						</div>
 					</div>
@@ -218,8 +208,10 @@
 														<img src="img/image8.jpg" alt="" />
 													</div>
 												</div>
-												<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 											<a class="news_thumb">
 												<div class="img_box_wrapp">
@@ -227,8 +219,10 @@
 														<img src="img/image9.jpg" alt="" />
 													</div>
 												</div>
-												<p>Проведены работы в 717 многоквартирных домах</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>Проведены работы в 717 многоквартирных домах</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 											<a class="news_thumb">
 												<div class="img_box_wrapp">
@@ -236,8 +230,10 @@
 														<img src="img/image10.jpg" alt="" />
 													</div>
 												</div>
-												<p>В Перми снесли 45 аварийных домов</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>В Перми снесли 45 аварийных домов</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 										</div>
 									</div>
@@ -253,8 +249,7 @@
 												</div>
 												<div class="col">
 													<p class="date_2">13.11.2019</p>
-													<p>Как узнать, когда проведут капремонт моего дома?</p>
-													<p>2</p>
+													<p>Как узнать, когда проведут капремонт моего дома? 2</p>
 												</div>
 											</a>
 											<a class="news_thumb">
@@ -263,8 +258,10 @@
 														<img src="img/image8.jpg" alt="" />
 													</div>
 												</div>
-												<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>ТСЖ затягивают процесс подачи тепла в жилой фонд</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 											<a class="news_thumb">
 												<div class="img_box_wrapp">
@@ -272,8 +269,10 @@
 														<img src="img/image9.jpg" alt="" />
 													</div>
 												</div>
-												<p>Проведены работы в 717 многоквартирных домах</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>Проведены работы в 717 многоквартирных домах</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 											<a class="news_thumb">
 												<div class="img_box_wrapp">
@@ -281,8 +280,10 @@
 														<img src="img/image10.jpg" alt="" />
 													</div>
 												</div>
-												<p>В Перми снесли 45 аварийных домов</p>
-												<p class="date_2">28.08.2018</p>
+												<div class="description">
+													<p>В Перми снесли 45 аварийных домов</p>
+													<p class="date_2">28.08.2018</p>
+												</div>
 											</a>
 										</div>
 									</div>
@@ -309,7 +310,7 @@
 			<div class="col">
 				<div class="append-elem resp_480" data-append-elem = "5"></div>
 				<div class="append-elem" data-append-desktop-elem = "4" data-min-screen = "480">
-					<p>Дизайн сайта<br /><a href="#" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
+					<p>Дизайн сайта<br /><a href="https://vk.com/nicesummerwind" class="black_link">Никита Панкратов</a><br /><a href="mailto:@nicesummerwind">@nicesummerwind</a></p>
 				</div>
 			</div>
 			<div class="col">
