--- a/index_4.html
+++ b/index_4.html
@@ -97,7 +97,7 @@
 								<p>Появилась плесень?</p>
 							</div>
 							<div class="h1_wrapp h1_wrapp_2">
-								<h1>ЖКХ помощник</h1>
+								<h1>ЖКХ Помощник</h1>
 								<p>онлайн-сервис компенсаций за проблемы ЖКХ</p>
 							</div>
 							<div>
